Apply new design changes

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -7,6 +7,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
+
 		<script src="//unpkg.com/alpinejs" defer></script>
 		<link rel="icon" type="image/png" href="{% static 'images/logo/codebysara.png' %}">
 		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
