--- a/website/templates/about_me/snippets/header.html
+++ b/website/templates/about_me/snippets/header.html
@@ -1,11 +1,12 @@
 {% load i18n %}
-<div class="mx-auto max-w-3xl text-base/7  text-center">
-    <p class="text-base/7 font-semibold text-secondary">{% trans "À propos de moi" %}</p>
-    <h1 class="mt-2 text-pretty text-4xl font-semibold tracking-tight text-dark sm:text-5xl">{% trans "Mon parcours" %}</h1>
-    <p class="mt-6 text-xl/8 text-secondary_accent mx-3 md:mx-0">
-        {% blocktrans %}
-            Mon parcours est le reflet de ma passion croissante pour l’informatique, de mes premières lignes de code à un master en alternance. 
-            J’ai construit étape par étape une solide base théorique, complétée par une expérience professionnelle concrète.
-        {% endblocktrans %}
+<div class="text-center mb-16">
+    <p class="text-base font-semibold text-tertiary">{% trans "À propos de moi" %}</p>
+    <h1 class="mt-2 text-4xl font-bold tracking-tight text-light sm:text-5xl">{% trans "Mon parcours" %}</h1>
+    <p class="mt-6 text-lg text-light">
+      {% blocktrans %}
+        Mon parcours est le reflet de ma passion croissante pour l’informatique, 
+        de mes premières lignes de code à un master en alternance. 
+        J’ai construit étape par étape une solide base théorique, complétée par une expérience professionnelle concrète.
+      {% endblocktrans %}
     </p>
-</div>    
+  </div>
