--- a/website/templates/contact/base.html
+++ b/website/templates/contact/base.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 
-<div > 
-    <div class="h-28 bg-gradient-to-t from-dark  to-primary ">
-    </div>
-    {% include 'home/snippets/page_contact.html' %}
+<div class="relative isolate bg-dark pb-32 pt-20 sm:pt-32"> 
+
+    {% include 'contact/snippets/page_contact.html' %}
   
 </div>
   
