--- a/website/templates/home/base.html
+++ b/website/templates/home/base.html
@@ -7,7 +7,8 @@
     {% include 'home/snippets/logo_banner.html' %}
     {% include 'home/snippets/about_me.html' %}
     {% include 'home/snippets/skills_section.html' %}
-    {% include 'home/snippets/page_contact.html' %}
+    {% include 'home/snippets/portfolio.html' %}
+    {% include 'contact/snippets/page_contact.html' %}
 </div>
   
 {% endblock content %}
