--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 <nav x-data="{ open_navbar: false }"  class="absolute top-0 left-0 w-full z-50 py-4 px-4">
   <div
-  class="rounded-[32px] mx-auto max-w-7xl  bg-primary/60 border border-secondary transition-all duration-0 ease-in-out"
+  class="rounded-[32px] mx-auto max-w-7xl  bg-dark border  transition-all duration-0 ease-in-out"
   
 >
       <div class="flex h-16 justify-between px-4 sm:px-6 lg:px-8">
         <div class="flex">
             <div class="-ml-2 mr-2 flex items-center md:hidden">
               <!-- Mobile menu button -->
-              <button @click="open_navbar =! open_navbar" type="button" class="relative inline-flex items-center justify-center rounded-md pl-4 text-secondary  hover:text-secondary_accent " aria-controls="mobile-menu" aria-expanded="false">
+              <button @click="open_navbar =! open_navbar" type="button" class="relative inline-flex items-center justify-center rounded-md pl-4 text-secondary  hover:text-light " aria-controls="mobile-menu" aria-expanded="false">
                 <span class="absolute -inset-0.5"></span>
                 <span class="sr-only">Open main menu</span>
                 <!--
@@ -32,7 +32,7 @@
             </div>
             <div class="flex shrink-0 items-center">
               <a href="{% url 'home' %}">
-                <img class="h-12 w-auto rounded-full" src="{% static 'images/logo/codebysara.png' %}" alt="Your Company">
+                <img class="h-12 w-auto " src="{% static 'images/logo/image copy.png' %}" alt="Your Company">
               </a>
             </div>
           </div>
@@ -42,9 +42,11 @@
           </div>
         
         <div class="hidden md:ml-6 md:flex md:items-center md:space-x-4">
-            <a href="{% url 'about' %}" class="rounded-full px-3 py-2 text-sm font-medium text-secondary_accent hover:text-dark hover:bg-primary/50">{% trans "À propos" %}</a>
-            <a href="{% url 'skills' %}" class="rounded-full px-3 py-2 text-sm font-medium text-secondary_accent hover:text-dark hover:bg-primary/50">{% trans "Mes compétences" %}</a>
-            <a href="{% url 'contact' %}" class="rounded-full px-3 py-2 text-sm font-medium text-secondary_accent hover:text-dark hover:bg-primary/50">{% trans "Contact" %}</a>
+          <a href="{% url 'about' %}" class="rounded-full px-3 py-2 text-sm font-medium text-light  hover:bg-primary/50">{% trans "À propos" %}</a>
+          <a href="{% url 'skills' %}" class="rounded-full px-3 py-2 text-sm font-medium text-light  hover:bg-primary/50">{% trans "Mes compétences" %}</a>
+          <a href="{% url 'portfolio' %}" class="rounded-full px-3 py-2 text-sm font-medium text-light  hover:bg-primary/50">{% trans "Portfolio" %}</a>
+
+            <a href="{% url 'contact' %}" class="rounded-full px-3 py-2 text-sm font-medium text-light  hover:bg-primary/50">{% trans "Contact" %}</a>
           
   
             {% include 'snippets/set_language.html' %}
@@ -55,21 +57,27 @@
 
       <!-- Mobile menu, show/hide based on menu state. -->
     <div class="md:hidden" id="mobile-menu" x-show="open_navbar">
-      <div class=" z-10 mt-1 text-sm bg-primary  rounded-b-[32px]">
+      <div class=" z-10 mt-1 text-sm bg-dark  rounded-b-[32px]">
         <!-- Current: "bg-primary-900 text-secondary", Default: "text-primary-300 hover:bg-primary-700 hover:text-secondary" -->
-        <a href="{% url 'about' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-secondary hover:bg-primary_accent hover:text-dark">
+        <a href="{% url 'about' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-light hover:text-tertiary ">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
           </svg>          
           {% trans "À propos" %}
         </a>
-        <a href="{% url 'skills' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-secondary hover:bg-primary_accent hover:text-dark">
+        <a href="{% url 'skills' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-light hover:text-tertiary">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
           </svg>          
           {% trans "Mes compétences" %}
         </a>
-        <a href="{% url 'contact' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-secondary hover:bg-primary_accent hover:rounded-b-[32px] hover:text-dark">
+        <a href="{% url 'portfolio' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-light hover:text-tertiary">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+          </svg>                   
+          {% trans "Portfolio" %}
+        </a>
+        <a href="{% url 'contact' %}" class="block flex items-center gap-2 px-8 py-2 text-base font-medium text-light hover:text-tertiary hover:rounded-b-[32px] ">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
           </svg>          
