--- a/theme/templates/snippets/set_language.html
+++ b/theme/templates/snippets/set_language.html
@@ -1,9 +1,9 @@
-<form method="POST" action="{% url 'set_language' %}"  x-data="{ open: false, lang: '{{ LANGUAGE_CODE }}' }" class="relative w-32 text-secondary_accent">
+<form method="POST" action="{% url 'set_language' %}"  x-data="{ open: false, lang: '{{ LANGUAGE_CODE }}' }" class="relative w-32 text-light">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ request.path }}">
     <input type="hidden" name="language" :value="lang">            
     <!-- Bouton sélection -->
-    <div @click="open = !open" class="flex items-center justify-between w-full cursor-pointer rounded-full border border-secondary bg-gradient-to-r from-light to-primary_accent  px-3 py-2 text-sm">
+    <div @click="open = !open" class="flex items-center justify-between w-full cursor-pointer rounded-full border border-secondary bg-gradient-to-r from-secondary to-primary  px-3 py-2 text-sm">
       <div class="flex items-center gap-2">
         <template x-if="lang === 'fr'">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="h-4 w-4 rounded-full" viewBox="0 0 256 256" xml:space="preserve">
@@ -36,13 +36,13 @@
         </template>
         <span x-text="lang === 'fr' ? 'Français' : 'English'"></span>
       </div>
-      <svg class="h-4 w-4 text-gray-500" fill="currentColor" viewBox="0 0 20 20">
+      <svg class="h-4 w-4 text-light" fill="currentColor" viewBox="0 0 20 20">
         <path d="M5.23 7.21a.75.75 0 011.06-.02L10 10.586l3.71-3.4a.75.75 0 111.04 1.08l-4.25 3.9a.75.75 0 01-1.04 0l-4.25-3.9a.75.75 0 01-.02-1.06z" />
       </svg>
     </div>
   
     <!-- Options -->
-    <div x-show="open" @click.outside="open = false" class="absolute z-10 mt-1 w-full rounded-md bg-light shadow-lg ring-1 ring-black/10 text-sm">
+    <div x-show="open" @click.outside="open = false" class="absolute z-10 mt-1 w-full rounded-md bg-secondary shadow-lg ring-1 ring-black/10 text-sm">
       <button type="submit" @click="lang = 'fr'; open = false" class="w-full text-left px-4 py-2 hover:bg-primary hover:rounded-t-md flex items-center gap-2">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="h-4 w-4 rounded-full" viewBox="0 0 256 256" xml:space="preserve">
           <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)">
