--- a/website/templates/about_me/base.html
+++ b/website/templates/about_me/base.html
@@ -1,12 +1,28 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 
-<div class="bg-light pt-36 "> 
-  {% include 'about_me/snippets/header.html' %}
-  {% include 'about_me/snippets/timestamp.html' %}
-  {% include 'about_me/snippets/academic_background.html' %}
-  {% include 'about_me/snippets/professional_exp.html' %}
+<div class="bg-dark pt-36 relative isolate"> 
+  <div aria-hidden="true" class="absolute inset-x-0 top-1/2 -z-10 -translate-y-1/2 transform-gpu overflow-hidden opacity-30 blur-3xl">
+    <div style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)" class="ml-[max(50%,38rem)] aspect-[1313/771] w-[82.0625rem] bg-gradient-to-tr from-tertiary to-secondary"></div>
+  </div>
+  <div aria-hidden="true" class="absolute inset-x-0 top-0 -z-10 flex transform-gpu overflow-hidden pt-32 opacity-25 blur-3xl sm:pt-40 xl:justify-end">
+    <div style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)" class="ml-[-22rem] aspect-[1313/771] w-[82.0625rem] flex-none origin-top-right rotate-[30deg] bg-gradient-to-tr from-primary_accent to-secondary xl:ml-0 xl:mr-[calc(50%-12rem)]"></div>
+  </div>
+  <div aria-hidden="true" class="absolute inset-x-0 bottom-0 -z-10 flex transform-gpu overflow-hidden pt-32 opacity-25 blur-3xl sm:pt-40 xl:justify-end">
+    <div style="clip-path: polygon(0 20%, 25% 15%, 50% 25%, 75% 10%, 100% 20%, 0% 100%, 0 100%)" 
+    class="ml-[-22rem] aspect-[1313/771] w-[82.0625rem] flex-none origin-top-right rotate-[15deg] bg-gradient-to-tr from-secondary to-primary xl:ml-0 xl:mr-[calc(50%-12rem)]">
 </div>
+ </div>
+  <section class="mx-auto max-w-4xl px-6  py-8 lg:py-16 lg:px-8">
+
+    {% include 'about_me/snippets/header.html' %}
+    {% include 'about_me/snippets/timestamp.html' %}
+    {% include 'about_me/snippets/professional_exp.html' %}
+
+  </section>
+
+  </div>
   
 {% endblock content %}
