change logo in base.html

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -7,10 +7,16 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta property="og:title" content="CodeBySara">
+		<meta property="og:description" content="Site de présentation de Sara El Allouche.">
+		<meta property="og:image" content="https://codebysara-bucket.s3.amazonaws.com/static/images/logo/image%20copy.png">
+		<meta property="og:url" content="https://www.codebysara.fr/fr/">
+		<meta property="og:type" content="website">
+
 		<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
 
 		<script src="//unpkg.com/alpinejs" defer></script>
-		<link rel="icon" type="image/png" href="{% static 'images/logo/codebysara.png' %}">
+		<link rel="icon" type="image/png" href="{% static 'images/logo/image copy.png' %}">
 		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
 		{% tailwind_css %}
 	</head>
